# rag

./: .gitignore  .pre-commit-config.yaml  chat.py  compose.yaml  langgraph.json  pyproject.toml  requirements.txt
app/: Dockerfile  app.py
notebooks/: vector_store.ipynb
rag/: data.py
src/: app.py  configuration.py  graph.py  prompt.py  retrieval.py
src/utils/: model.py  nodes.py  state.py  tools.py
